- New Quest World: Amonkhet -
A new quest world submitted by Schnautzr is available, based on the Amonkhet block. It's a small quest world featuring a variety of decks and challenges with cards from Amonkhet and Hour of Devastation.

- New Quest World: Invasion -
A new quest world submitted by Seravy is available, based on the Invasion block.

- Quest Mode: Foil cards in decks -
In Quest mode, planeswalkers provided in planeswalker decks will now be foil, as they are in their paper counterparts. Also, in certain other decks, certain cards are foiled if they are foiled in the original official paper release.

- Boxed Set Support -
Support for several boxed sets has been added, namely, Anthologies (ATH), Battle Royale (BRB), Beatdown (BTD), Deckmasters: Garfield vs. Finkel (DKM), and Duels of the Planeswalkers special decks set (DPA).

- MTGO Sets -
Five new sets are available which are indexed by Scryfall and which are MTGO exclusive are now supported in Forge: Commander Theme Decks (TD0), Magic Online Deck Series (TD1), Duel Decks: Mirrodin Pure vs. New Phyrexia (TD2), Legendary Cube (PZ1), and Treasure Chests (PZ2)

- Download Pictures -
Improvements to Download Pictures and Auto fetcher

- Bug fixes -
As always, this release of Forge features an assortment of bug fixes and improvements based on user feedback during the previous release run.
